# louis-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.org  CLAUDE.md  Cargo.toml  README.md  README.org  TODO.org  deny.toml  grammar.ebnf  test_all_tables.sh  test_all_yaml_tests.sh
.github/workflows/: codeql.yml  dependencies.yml  python-wheels.yml  sbom.yml
dictionaries/: README.org  da-dk-g2.bincode  de-g1-core-patterns.bincode  de-g1.standard.bincode  de-g2-core-patterns.bincode  de-g2.standard.bincode  en-g3-patterns.bincode  hyphenation.bincode  nocross-precedence-test.dic  nocross-test.dic
doc/: Architecture_Decision_Records.org
docs/superpowers/plans/: 2026-07-08-louis-py-bindings.md
docs/superpowers/specs/: 2026-07-08-louis-py-bindings-design.md
fuzz/: .gitignore  Cargo.toml  README.md  build.rs  import-seeds.py
fuzz/data/translate_tables/: README.md  fuzz_maximal.ctb
fuzz/dict/: table.dict  translate.dict
fuzz/fuzz_targets/: parse.rs  table.rs  translate.rs
fuzz/seeds/table/: 00_basic_chars.tbl  01_digits.tbl  02_case_caps.tbl  03_punctuation.tbl  04_grouping.tbl  05_always.tbl  06_word_rules.tbl  07_numeric_word.tbl  08_match.tbl  09_context.tbl  10_passes.tbl  11_correct.tbl  12_attribute.tbl  13_word_contractions.tbl  14_nocontract.tbl  15_swap.tbl  16_seq_attribute.tbl  18_unicode.tbl  19_backward.tbl  90_invalid_missing_operand.tbl  91_invalid_braille.tbl  92_invalid_match.tbl  93_invalid_context.tbl
fuzz/seeds/translate/: 02_correct.txt  03_always_word.txt  04_match.txt  05_word_affix.txt  06_context_var.txt  07_context_swap.txt  08_punct_paren.txt  09_numeric.txt  10_multipass_greek.txt  11_mixed_case.txt  12_unicode_mixed.txt  13_contractions.txt
louis-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
louis-py/python/louis_py/: __init__.py  _louis_py.pyi
louis-py/src/: lib.rs
louis-py/tests/: conftest.py  test_direction.py  test_emphasis.py  test_errors.py  test_modes.py  test_options.py  test_smoke.py  test_tablepath.py  test_threading.py  test_translate.py
louis-py/tests/tables/: mini.ctb
src/: bundle.rs  bundled_smoke.rs  check.rs  check_yaml.rs  emphasis.rs  hyphenation.rs  lib.rs  main.rs  metadata.rs  parser.rs  test.rs  text_attribute.rs  translator.rs  yaml.rs
src/parser/: attribute.rs  braille.rs  character_class.rs  match_rule.rs  mod.rs  multipass.rs
src/parser/multipass/: action.rs  test.rs
src/translator/: boundaries.rs  character.rs  character_classes.rs  context_pattern.rs  effect.rs  graph.rs  indication.rs  match_pattern.rs  nfa.rs  options.rs  pipeline.rs  position_constraints.rs  pre_translation.rs  regexp.rs  swap.rs  table.rs  transforms.rs  translation.rs  trie.rs
src/translator/indication/: computer_braille.rs  emphasis.rs  events.rs  lettersign.rs  nocontract.rs  numeric.rs  uppercase.rs
src/translator/table/: context.rs  display.rs  multipass.rs  primary.rs
tests/: es-g2.yaml  nl-comp8.yaml  test_display.txt  test_table.txt  unicode-without-blank.dis
