[package]
name = "louis-rs"
version = "0.2.0"
edition = "2024"
description = "A pure Rust re-implementation of the liblouis braille translator and back-translator"
repository = "https://github.com/liblouis/louis-rs"
readme = "README.md"
license = "LGPL-2.1-or-later"
keywords = ["braille", "liblouis"]
include = ["src/**/*.rs", "README.md"]

[[bin]]
name = "louis"
path = "src/main.rs"

[lib]
name = "louis"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
search_path = "0.1.4"
clap = { version = "4.4.11", features = ["derive"] }
enumset = "1.1.3"
libyaml = "0.2.0"
log = "0.4.21"
env_logger = "0.11.3"
tabled = "0.17.0"
hyphenation = "0.8.3"

[features]
default = ["backwards_compatibility"]
backwards_compatibility = []

# a temporary feature to limit the yaml test cases to forward only
forward_only = []
