[build-system]
requires = ["maturin>=1.14,<2"]
build-backend = "maturin"

[project]
name = "louis-py"
version = "0.1.0"
description = "Python bindings for the louis braille translator"
requires-python = ">=3.11"
license = { text = "LGPL-2.1-or-later" }
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Adaptive Technologies",
]

[dependency-groups]
dev = ["pytest", "ruff==0.15.20", "ty"]

[tool.maturin]
module-name = "louis_py._louis_py"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "Cargo.toml" },
  { file = "src/**/*.rs" },
  { file = "../Cargo.toml" },
  { file = "../src/**/*.rs" },
  { file = "../Cargo.lock" },
]
